ch12/tekton/triggers/tekton-triggers-argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-triggers-argocd
spec:
  ingressClassName: nginx
  rules:
  - host: tekton-triggers-argocd.upandrunning.local
    http:
      paths:
      - backend:
          service:
            name: el-tekton-triggers-argocd
            port:
              number: 8080
        path: /webhook
        pathType: Prefix
